code/ocaml/simplebool/parser.output
   0  $accept : %entry% $end

   1  toplevel : EOF
   2           | Command SEMI toplevel

   3  Command : IMPORT STRINGV
   4          | Term
   5          | LCID Binder

   6  Binder : COLON Type

   7  Type : ArrowType

   8  AType : LPAREN Type RPAREN
   9        | BOOL

  10  ArrowType : AType ARROW ArrowType
  11            | AType

  12  Term : AppTerm
  13       | LAMBDA LCID COLON Type DOT Term
  14       | LAMBDA USCORE COLON Type DOT Term
  15       | IF Term THEN Term ELSE Term

  16  AppTerm : ATerm
  17          | AppTerm ATerm

  18  ATerm : LPAREN Term RPAREN
  19        | LCID
  20        | TRUE
  21        | FALSE

  22  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (22)

	IMPORT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LCID  shift 8
	EOF  shift 9
	LPAREN  shift 10
	.  error

	toplevel  goto 11
	Command  goto 12
	Term  goto 13
	AppTerm  goto 14
	ATerm  goto 15


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	Command : IMPORT . STRINGV  (3)

	STRINGV  shift 16
	.  error


state 4
	Term : LAMBDA . LCID COLON Type DOT Term  (13)
	Term : LAMBDA . USCORE COLON Type DOT Term  (14)

	LCID  shift 17
	USCORE  shift 18
	.  error


state 5
	Term : IF . Term THEN Term ELSE Term  (15)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LCID  shift 19
	LPAREN  shift 10
	.  error

	Term  goto 20
	AppTerm  goto 14
	ATerm  goto 15


state 6
	ATerm : TRUE .  (20)

	.  reduce 20


state 7
	ATerm : FALSE .  (21)

	.  reduce 21


state 8
	Command : LCID . Binder  (5)
	ATerm : LCID .  (19)

	COLON  shift 21
	TRUE  reduce 19
	FALSE  reduce 19
	LCID  reduce 19
	LPAREN  reduce 19
	SEMI  reduce 19

	Binder  goto 22


state 9
	toplevel : EOF .  (1)

	.  reduce 1


state 10
	ATerm : LPAREN . Term RPAREN  (18)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LCID  shift 19
	LPAREN  shift 10
	.  error

	Term  goto 23
	AppTerm  goto 14
	ATerm  goto 15


state 11
	%entry% : '\001' toplevel .  (22)

	.  reduce 22


state 12
	toplevel : Command . SEMI toplevel  (2)

	SEMI  shift 24
	.  error


state 13
	Command : Term .  (4)

	.  reduce 4


state 14
	Term : AppTerm .  (12)
	AppTerm : AppTerm . ATerm  (17)

	TRUE  shift 6
	FALSE  shift 7
	LCID  shift 19
	LPAREN  shift 10
	THEN  reduce 12
	ELSE  reduce 12
	RPAREN  reduce 12
	SEMI  reduce 12

	ATerm  goto 25


state 15
	AppTerm : ATerm .  (16)

	.  reduce 16


state 16
	Command : IMPORT STRINGV .  (3)

	.  reduce 3


state 17
	Term : LAMBDA LCID . COLON Type DOT Term  (13)

	COLON  shift 26
	.  error


state 18
	Term : LAMBDA USCORE . COLON Type DOT Term  (14)

	COLON  shift 27
	.  error


state 19
	ATerm : LCID .  (19)

	.  reduce 19


state 20
	Term : IF Term . THEN Term ELSE Term  (15)

	THEN  shift 28
	.  error


state 21
	Binder : COLON . Type  (6)

	BOOL  shift 29
	LPAREN  shift 30
	.  error

	Type  goto 31
	ArrowType  goto 32
	AType  goto 33


state 22
	Command : LCID Binder .  (5)

	.  reduce 5


state 23
	ATerm : LPAREN Term . RPAREN  (18)

	RPAREN  shift 34
	.  error


state 24
	toplevel : Command SEMI . toplevel  (2)

	IMPORT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LCID  shift 8
	EOF  shift 9
	LPAREN  shift 10
	.  error

	toplevel  goto 35
	Command  goto 12
	Term  goto 13
	AppTerm  goto 14
	ATerm  goto 15


state 25
	AppTerm : AppTerm ATerm .  (17)

	.  reduce 17


state 26
	Term : LAMBDA LCID COLON . Type DOT Term  (13)

	BOOL  shift 29
	LPAREN  shift 30
	.  error

	Type  goto 36
	ArrowType  goto 32
	AType  goto 33


state 27
	Term : LAMBDA USCORE COLON . Type DOT Term  (14)

	BOOL  shift 29
	LPAREN  shift 30
	.  error

	Type  goto 37
	ArrowType  goto 32
	AType  goto 33


state 28
	Term : IF Term THEN . Term ELSE Term  (15)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LCID  shift 19
	LPAREN  shift 10
	.  error

	Term  goto 38
	AppTerm  goto 14
	ATerm  goto 15


state 29
	AType : BOOL .  (9)

	.  reduce 9


state 30
	AType : LPAREN . Type RPAREN  (8)

	BOOL  shift 29
	LPAREN  shift 30
	.  error

	Type  goto 39
	ArrowType  goto 32
	AType  goto 33


state 31
	Binder : COLON Type .  (6)

	.  reduce 6


state 32
	Type : ArrowType .  (7)

	.  reduce 7


state 33
	ArrowType : AType . ARROW ArrowType  (10)
	ArrowType : AType .  (11)

	ARROW  shift 40
	DOT  reduce 11
	RPAREN  reduce 11
	SEMI  reduce 11


state 34
	ATerm : LPAREN Term RPAREN .  (18)

	.  reduce 18


state 35
	toplevel : Command SEMI toplevel .  (2)

	.  reduce 2


state 36
	Term : LAMBDA LCID COLON Type . DOT Term  (13)

	DOT  shift 41
	.  error


state 37
	Term : LAMBDA USCORE COLON Type . DOT Term  (14)

	DOT  shift 42
	.  error


state 38
	Term : IF Term THEN Term . ELSE Term  (15)

	ELSE  shift 43
	.  error


state 39
	AType : LPAREN Type . RPAREN  (8)

	RPAREN  shift 44
	.  error


state 40
	ArrowType : AType ARROW . ArrowType  (10)

	BOOL  shift 29
	LPAREN  shift 30
	.  error

	ArrowType  goto 45
	AType  goto 33


state 41
	Term : LAMBDA LCID COLON Type DOT . Term  (13)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LCID  shift 19
	LPAREN  shift 10
	.  error

	Term  goto 46
	AppTerm  goto 14
	ATerm  goto 15


state 42
	Term : LAMBDA USCORE COLON Type DOT . Term  (14)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LCID  shift 19
	LPAREN  shift 10
	.  error

	Term  goto 47
	AppTerm  goto 14
	ATerm  goto 15


state 43
	Term : IF Term THEN Term ELSE . Term  (15)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LCID  shift 19
	LPAREN  shift 10
	.  error

	Term  goto 48
	AppTerm  goto 14
	ATerm  goto 15


state 44
	AType : LPAREN Type RPAREN .  (8)

	.  reduce 8


state 45
	ArrowType : AType ARROW ArrowType .  (10)

	.  reduce 10


state 46
	Term : LAMBDA LCID COLON Type DOT Term .  (13)

	.  reduce 13


state 47
	Term : LAMBDA USCORE COLON Type DOT Term .  (14)

	.  reduce 14


state 48
	Term : IF Term THEN Term ELSE Term .  (15)

	.  reduce 15


53 terminals, 11 nonterminals
23 grammar rules, 49 states
